--- a/index.html
+++ b/index.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بوت جيزي - مساعدك على فيسبوك</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Facebook SDK -->
-    <script>
-        window.fbAsyncInit = function() {
-            FB.init({
-                appId: 'YOUR_APP_ID', // استبدل برقم التطبيق الحقيقي
-                xfbml: true,
-                version: 'v19.0'
-            });
-            FB.AppEvents.logPageView();
-        };
-
-        (function(d, s, id){
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) {return;}
-            js = d.createElement(s); js.id = id;
-            js.src = "https://connect.facebook.net/ar_AR/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>سياسة الخصوصية وشروط الاستخدام - بوت ماسنجر</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f8f9fa;
+      color: #222;
+      padding: 20px;
+      line-height: 1.8;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #004085;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 14px;
+      text-align: center;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>مرحبًا بك في بوت جيزي 🤖</h1>
-        <p>مساعدك الذكي للرد على استفساراتك عبر فيسبوك ماسنجر</p>
-    </header>
 
-    <main>
-        <section class="cta">
-            <a href="https://m.me/YOUR_PAGE_USERNAME" class="messenger-btn">
-                تحدث مع البوت الآن
-            </a>
-        </section>
+  <h1>سياسة الخصوصية وشروط الاستخدام</h1>
 
-        <section class="features">
-            <h2>ماذا يمكن للبوت فعله؟</h2>
-            <ul>
-                <li>الرد على الاستفسارات العامة</li>
-                <li>تقديم المساعدة الفنية</li>
-                <li>توجيهك إلى المعلومات المطلوبة</li>
-            </ul>
-        </section>
-    </main>
+  <h2>من نحن؟</h2>
+  <p>هذا البوت يعمل كوسيط بين المستخدمين وصفحتنا على فيسبوك لتقديم خدمات تلقائية مثل الرد على الرسائل، أو توفير معلومات معينة، أو مساعدات تلقائية.</p>
 
-    <footer>
-        <p>© 2025 بوت جيزي. جميع الحقوق محفوظة.</p>
-        <p><a href="privacy.html">سياسة الخصوصية</a></p>
-    </footer>
+  <h2>سياسة الخصوصية</h2>
+  <p>نحن لا نقوم بجمع أو تخزين أي معلومات شخصية خارج منصة فيسبوك. جميع التفاعلات تتم بشكل مباشر داخل تطبيق فيسبوك، ولا يتم نقل أي بيانات إلى خوادم خارجية.</p>
+  <p>لا نشارك أي بيانات مع أطراف ثالثة. نلتزم بالحفاظ على خصوصيتك ضمن أعلى المعايير الممكنة.</p>
+
+  <h2>شروط الاستخدام</h2>
+  <ul>
+    <li>يُمنع استخدام البوت لأي غرض غير قانوني أو مسيء.</li>
+    <li>قد يتم حظر المستخدم في حالة إساءة الاستخدام أو محاولة اختراق النظام.</li>
+    <li>البوت متاح للاستخدام كما هو، دون أي ضمانات.</li>
+  </ul>
+
+  <h2>التعديلات</h2>
+  <p>قد نقوم بتحديث هذه السياسة في أي وقت. سيتم نشر أي تغييرات هنا مباشرة.</p>
+
+  <h2>معلومات الاتصال</h2>
+  <p>لأي استفسار أو طلب، يرجى التواصل معنا عبر صفحتنا على فيسبوك:</p>
+  <p><a href="https://facebook.com/اسم_صفحتك" target="_blank">اضغط هنا لزيارة صفحتنا</a></p>
+
+  <footer>
+    &copy; 2025 - جميع الحقوق محفوظة
+  </footer>
+
 </body>
 </html>
